Fixed the alignment of the top logos on the unscoped page

--- a/styles.css
+++ b/styles.css
@@ -1101,7 +1101,7 @@ div.rssChannelEntries { border:none; background:#FFFFFF; }
 
 .topLogo img { border:0; display:block; margin-left:auto; margin-right:auto }
 
-.topLogoImage {float:left; padding:30px 10px;}
+.topLogoImage {float:left; padding:15px 10px;}
 
 .topLogoImage, .mobiusLogo {width:250px;}
 
